# rustchain-bounties

./: .gitignore  ARCHITECTURE.md  BOUNTY_CLAIM.md  BOUNTY_LEDGER.md  CODE_OF_CONDUCT.md  CODE_REVIEW_CHECKLIST.md  COMMUNITY_GUIDELINES.md  COMMUNITY_RESOURCES.md  CONTRIBUTING.md  CONTRIBUTING_GUIDE.md  Cargo.toml  ERA_1101_IMPLEMENTATION_PLAN.md  ERA_1101_TASK_COMPLETE.md  INCIDENT_RESPONSE_PLAN.md  ISSUE_97_SUMMARY.md  LOGGING_BEST_PRACTICES.md  LP_TRACKER_97.md  PR_BODY.md  PR_BODY_1594.md  PR_BODY_1603.md  PR_BODY_434.md  PR_DESCRIPTION.md  PR_LP_PROVIDER_97.md  README.health-check.md  README.md  README_BADGE_UPDATE.md  README_WITH_BADGES.md  README_zh.md  SECURITY.md  SECURITY_BEST_PRACTICES.md  STAKING_EXPLAINER.md  STAR_FUNNEL_EXPLAINER.md  TYPE_HINTS_BATCH2.md  TYPE_HINTS_PROGRESS.md  ai_agent.py  bottube_server.py  bounty-285-social-proof.md  bounty-299-follow-proof.md  build.sh  c64-bounty-issue.md  (+17 more)
.github/: PULL_REQUEST_TEMPLATE.md  supply-chain-allowlist.yml
1639-rustchain-brand-assets/: LICENSE.md  README.md
386-miner-port/: HARDWARE_GUIDE.md  IMPLEMENTATION_PLAN.md  PR_TEMPLATE.md  README.md  TASK_COMPLETION_REPORT.md  TECHNICAL_ANALYSIS.md
431-gameboy-submission/: COMPLETION_REPORT_CN.md  README.md
ace-1950-miner/: CLAIM.md  COMPLETE.md  LICENSE  README.md
agent_framework/: README.md  WORKFLOW.md  __init__.py  bounty_claimer.py  meat_finder.py
avidac-miner/: ARCHITECTURE.md  COMPLETION_SUMMARY.md  PHASE1_COMPLETE.md  PR_SUBMISSION.md  README.md  demo.py  requirements.txt  run_tests.py  test_quick.py
badges/: active-hunters.json  hunter-stats.json  legendary-hunters.json  top-hunter.json  updated-at.json
battlezone-miner/: ARCHITECTURE.md  COMMIT_MESSAGE.md  MINING_CONCEPT.md  PROJECT_SUMMARY.md  README.md
bottube_templates/: dashboard.html
bounties/: XP_TRACKER.md  XP_TRACKER_BACKFILLED.md  partner-program-proposal.md
bounty-434-dreamcast/: Cargo.toml  PR_TEMPLATE.md  README.md
bounty-434-dreamcast/docs/: BUILD.md  HARDWARE.md
bounty-434-dreamcast/src/: lib.rs  main.rs  network.rs  sha256_sh4.rs  storage.rs  stratum.rs  ui.rs
bounty-434-dreamcast/target-specs/: sh4-unknown-kallistios.json
breakout-miner/: PROJECT_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  README.md  breakout_hardware.json  breakout_simulator.py  miner.asm  wallet.txt
c64-miner/: Makefile  README.md
cdc160-miner/: CDC160_PORT.md  README.md  cdc160_miner.py  cdc160_simulator.py  requirements.txt
crewai-template/: README.md  requirements.txt
docs/: AGENT_BOUNTY_HUNTER_FRAMEWORK.md  ANTI_SYBIL_MECHANISMS.md  API_QUICK_REFERENCE.md  API_REFERENCE.md  API_VERSIONING_POLICY.md  BOTTUBE_API_UPLOAD_TEST_1502.md  BOUNTY_HYGIENE.md  BRIDGE_DOCUMENTATION.md  CITATION_GUIDE.md  CI_CD_PIPELINE_GUIDE.md  CLAIM_RISK_SCORER.md  COMMUNITY_BOUNTY_CLAIM_TEMPLATE.md  COMMUNITY_METRICS.md  COMMUNITY_RESOURCES.md  DEPENDENCY_MANAGEMENT_GUIDE.md  ECOSYSTEM_GROWTH_STRATEGY.md  ENVIRONMENT_VARIABLES_GUIDE.md  FINAL_STRESS_TEST_REPORT.md  GOVERNANCE_GUIDE.md  HARDWARE_SECURITY_GUIDE.md  IBM702_MINER_PLAN.md  INSTALLATION_RECORDING.md  ISSUE_87_MINIMAL_ACCEPTANCE_PACKET.md  LIQUIDITY_PROVIDER_97.md  MINERS_SETUP_GUIDE.md  MINING_OPTIMIZATION_GUIDE.md  NETWORK_TOPOLOGY.md  NODE_HOST_PREFLIGHT_CHECKLIST.md  NODE_MINER_WEEKLY_SCAN.md  NODE_OPERATOR_GUIDE.md  PROMETHEUS_METRICS.md  README.md  REFERRAL_PROGRAM_PROPOSAL.md  RELEASE_CHECKLIST.md  SECURITY_AUDIT_CHECKLIST.md  TRIAGE.md  (+19 more)
rust_miner/: Cargo.toml  README.md  cast_to_gif.py  config.example.toml  installation.txt  record_install.ps1  record_terminal.py
rust_miner/src/: attestation.rs  config.rs  fingerprint.rs  hardware.rs  main.rs  network.rs
rustchain-n64-miner/: .gitignore  BOUNTY_CLAIM.md  Cargo.toml  IMPLEMENTATION.md  Makefile  README.md  SUMMARY.md
rustchain-n64-miner/.github/workflows/: ci.yml
rustchain-n64-miner/include/: n64.h
rustchain-n64-miner/src/: attestation.rs  config.rs  crypto.rs  hardware.rs  main.rs
rustchain-n64-miner/src/fingerprint/: anti_emulation.rs  cache_timing.rs  cop0_regs.rs  fpu_identity.rs  mod.rs  tlb_timing.rs
rustchain-n64-miner/src/n64/: controller.rs  display.rs  mod.rs  storage.rs
(+876 files in other folders)
